--- a/main.html
+++ b/main.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>My Favorite Animal</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>My Favorite Animal: Dog</h1>
+    <img src="https://media.istockphoto.com/id/688041916/photo/two-dogs-running-at-park-lawn-playing-with-puller-toy.jpg?s=612x612&w=0&k=20&c=NxzcBFCSurvKSxa98QeehN8JvALIS0eW9QeO1jmjm5o=" alt="A cute dog playing in the park">
 </body>
-
 </html>
